--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
           <p>Paragraph 1.</p>
           <p>Paragraph 2.</p>
           <p>Paragraph 3.</p>
+          <p>Paragraph 4.</p>
         </div>
         <div class="column">
           <h2>Column 2</h2>
