--- a/home.html
+++ b/home.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5J0BKSH5W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L5J0BKSH5W');
+</script>
+
     <meta charset="utf-8">
     <title>Matahi Historical Society homepage</title>
     <link rel="stylesheet" href="styles/styles.css">
